# kisha

./: .gitignore  CMakeLists.txt  README.md
assets/: CMakeLists.txt
assets/shaders/: basic-fragment.slang  basic-vertex.slang  fragment.slang  triangle.frag.slang  triangle.vert.slang  vertex.slang
cmake/: CommonCompileOptions.cmake  CompileShaders.cmake  ProjectDependencies.cmake  ProjectOptions.cmake
kisha-engine/: CMakeLists.txt
kisha-engine/profiles/: VP_KISHA_baseline.json
kisha-engine/src/: CMakeLists.txt
kisha-engine/src/core/: CMakeLists.txt  engine.cpp  engine_init_helpers.cpp  engine_init_helpers.hpp  errors.cpp  frame_ring.cpp  framecontext.cpp  presenter.cpp  rendering.cpp  swapchain.cpp
kisha-engine/src/include/: engine.hpp  errors.hpp  errors_fmt.hpp  frame_ring.hpp  framecontext.hpp  logging.hpp  presenter.hpp  rendering.hpp  swapchain.hpp
kisha-engine/tests/: CMakeLists.txt  engine_init_helpers.tests.cpp  engine_runtime.tests.cpp  rendering.tests.cpp
samples/: CMakeLists.txt
samples/framework/: CMakeLists.txt  native_handle.cpp  native_handle.hpp  sample_app.cpp  sample_app.hpp  sample_error.hpp  spirv_loader.cpp  spirv_loader.hpp  window.cpp  window.hpp
samples/model-loading/: CMakeLists.txt
samples/model-loading/include/: ModelLoader.h
samples/model-loading/src/: main.cpp
samples/tests/: CMakeLists.txt
samples/triangle/: CMakeLists.txt  main.cpp
